fix: bg in dark mode

--- a/src/components/ProjectList.module.css
+++ b/src/components/ProjectList.module.css
@@ -86,7 +86,7 @@
   gap: 1rem;
 }
 
-.button {
+.modalButton {
   display: inline-block;
   font-size: 0.8rem;
   text-transform: uppercase;
